# Airfoil_CFD

./: .gitignore  AGENTS.md  README.md  aircraft_to_web.py  check_arrays.py  post_process.py  pyproject.toml  requirements.txt  run_3d_pipeline.py  run_aircraft.py  run_cad.py  run_fea.py  run_fea_2d.py  run_fea_naca0012.py  run_flight_dynamics.py  run_optimization.py  run_tunnel.py  test_fea_uniform.py
docs/: aircraft_design.html  airfoil_analysis.html  build_site.py  flight_dynamics.html  implementation.html  index.html  methodology.html  optimization.html  paraview.html  structural.html
docs/airfoils/: naca0012.html  naca0012_optimized.html
docs/assets/images/optimized/: fea_results.json
docs/assets/models/: aircraft.glb  naca0012_wing.glb  optimized_wing.glb
docs/css/: style.css
physics/: __init__.py  aero_surrogate.py  aircraft.py  analysis.py  cad_wing.py  fea.py  fea2d.py  geometry.py  mesher.py  mesher3d.py  optimize.py  post.py  solver.py  validate.py
src/: actuator.py  dynamics.py  gust_profile.py  plot_telemetry.py  verification_hook.py
templates/: report_base.html  su2_template.cfg
