[project]
name = "airfoil-cfd"
version = "0.1.0"
description = "Modular CFD pipeline for NACA airfoil analysis"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.5.0",
    "scipy>=1.18.0",
    "gmsh>=4.13.1",
    "pyvista>=0.44.0",
    "jinja2>=3.1.5",
    "matplotlib>=3.9.0",
    "imageio>=2.35.0",
    "aerosandbox>=1.1.17",
]
