[project]
name = "airfoil-cfd"
version = "0.1.0"
description = "Modular CFD pipeline for NACA airfoil analysis"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=1.22,<2.5",
    "scipy>=1.18.0",
    "gmsh>=4.13.1",
    "pyvista>=0.44.0",
    "jinja2>=3.1.5",
    "matplotlib>=3.9.0",
    "imageio>=2.35.0",
    "aerosandbox>=1.1.17",
    "felupe>=10.1.0",
    "meshio>=5.3.5",
    "cadquery>=2.4.0",
    "trimesh>=4.12.2",
]
